@@ -140,8 +140,6 @@ zbx_graph_item_type;
 #define ITEM_DELAY_FLEX_LEN_MAX		ITEM_DELAY_FLEX_LEN+1
 #define ITEM_IPMI_SENSOR_LEN		128
 #define ITEM_IPMI_SENSOR_LEN_MAX	ITEM_IPMI_SENSOR_LEN+1
-#define ITEM_PARAMS_LEN			2048
-#define ITEM_PARAMS_LEN_MAX		ITEM_PARAMS_LEN+1
 #define ITEM_USERNAME_LEN		64
 #define ITEM_USERNAME_LEN_MAX		ITEM_USERNAME_LEN+1
 #define ITEM_PASSWORD_LEN		64
