@@ -93,14 +93,14 @@ static int	calcitem_parse_expression(DC_ITEM *dc_item, expression_t *exp,
 	size_t		exp_alloc = 128, exp_offset = 0;
 	int		functionid, ret;
 
-	zabbix_log(LOG_LEVEL_DEBUG, "In %s() expression:'%s'", __function_name, dc_item->params_orig);
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s() expression:'%s'", __function_name, dc_item->params);
 
 	assert(dc_item);
 	assert(exp);
 
 	exp->exp = zbx_malloc(exp->exp, exp_alloc);
 
-	for (e = dc_item->params_orig; '\0' != *e; e++)
+	for (e = dc_item->params; '\0' != *e; e++)
 	{
 		if (NULL != strchr(" \t\r\n", *e))
 			continue;
@@ -152,7 +152,7 @@ static int	calcitem_evaluate_expression(DC_ITEM *dc_item, expression_t *exp,
 	DB_ROW		db_row;
 	DB_ITEM		item;
 
-	zabbix_log(LOG_LEVEL_DEBUG, "In %s() expression:'%s'", __function_name, exp->exp);
+	zabbix_log(LOG_LEVEL_DEBUG, "In %s()", __function_name);
 
 	if (0 == exp->functions_num)
 		return ret;
@@ -292,7 +292,7 @@ int	get_value_calculated(DC_ITEM *dc_item, AGENT_RESULT *result)
 	double		value;
 
 	zabbix_log(LOG_LEVEL_DEBUG, "In %s() key:'%s' expression:'%s'", __function_name,
-			dc_item->key_orig, dc_item->params_orig);
+			dc_item->key_orig, dc_item->params);
 
 	memset(&exp, 0, sizeof(exp));
 
